--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,4 +6,5 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
-@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+// @import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "~font-awesome/scss/font-awesome.scss";
