--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,5 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import '../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss';
